# ai-k8s-incident-intelligence

./: README.md  docker-compose.yml  pyrightconfig.json
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/ai/: __init__.py  diagnosis_models.py  evidence_analyzer.py  exceptions.py  llm_client.py  prompt_builder.py  reasoning.py  root_cause_analyzer.py
backend/api/: clusters.py  export.py  health.py  history.py  investigate.py
backend/core/: auth.py  config.py  logging.py
backend/kubernetes/: cluster_manager.py  cluster_verifier.py  deployment_inspector.py  events_analyzer.py  exceptions.py  investigator.py  kubectl_executor.py  logs_collector.py  network_inspector.py  pod_inspector.py
backend/models/: investigation.py
backend/services/: export_service.py  history_service.py  investigation.py  investigation_service.py
backend/tests/: test_health.py
docs/: README.md  investigation_history.sql
frontend/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: AuthGate.tsx  AuthPageShell.tsx  AuthProvider.tsx  ClusterSelector.tsx  Dashboard.tsx  DiagnosisCard.tsx  EvidenceCard.tsx  ExportMenu.tsx  InvestigateButton.tsx  LoginForm.tsx  (+3 more)
prompts/: 01-prompt-project-setup.md  02-prompt-kubernetes-investigation-engine.md  03-prompt-ai-reasoning-engine.md  04-dashboard-and-api-integration.md  05-production-hardening-testing-and-deployment.md  05-prompt-production-features.md  06-enterprise-observability-and-ai-operations.md  README.md
(+10 files in other folders)
